fixed z-index of cell when repositioning in chrome; added border to cell

--- a/public/dtd-style1.css
+++ b/public/dtd-style1.css
@@ -41,9 +41,15 @@ body{
   overflow: auto;
   place-self: stretch;
   background: lightgray;
+  border: 1px solid gray;
   margin: 5px;
   border-radius: 10px;
   font-family: monospace;
+}
+
+.cell-marker{
+  outline-offset: -3px;
+  z-index: 1000000;
 }
 
 .dtd-cell.dtd-cell-clickable{
